adds the heading

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,9 @@
 <!-- SET THE CONTROLLER -->
 <body ng-controller="GalleryController">
 	<div>
+		<div>
+			<h1 style="text-align:center">Sample AWS S3 Gallery </h1>
+		</div>
 		<div id="todo-list" class="row">
 			<div class="col-sm-4 col-sm-offset-4">
 				<div id="imageNames" class="row">
